--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,10 @@
 {deps, [
     {jsone, {git, "https://github.com/sile/jsone.git"}} 
 ]}.
+{relx, [{release, {"dev_elevator", "0.0.1"},
+         [elevator]},
+
+        {dev_mode, true},
+        {include_erts, false},
+
+        {extended_start_script, false}]}.
