--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 {relx, [{release, {"dev_elevator", "0.0.1"},
          [elevator]},
 
-        {dev_mode, true},
+        {dev_mode, false},
         {include_erts, false},
 
         {extended_start_script, false}]}.
