--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,6 @@
          [elevator]},
 
         {dev_mode, false},
-        {include_erts, false},
+        {include_erts, true},
 
         {extended_start_script, false}]}.
