--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, [
-    {jsone, {git, "https://github.com/sile/jsone.git"}} 
+    {jsone, "1.4.5"}
 ]}.
 {relx, [{release, {"dev_elevator", "0.0.1"},
          [elevator]},
