--- a/rebar.config
+++ b/rebar.config
@@ -7,5 +7,6 @@
 
         {dev_mode, false},
         {include_erts, true},
+        {vm_args, "config/vm.args"},
 
         {extended_start_script, false}]}.
