--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {deps, [
     {jsone, "1.4.5"}
 ]}.
-{relx, [{release, {"dev_elevator", "0.0.1"},
+{relx, [{release, {"elevator", "1.0.0"},
          [elevator]},
 
         {dev_mode, false},
